--- a/Siteweb/css/style1.css
+++ b/Siteweb/css/style1.css
@@ -5,6 +5,7 @@ html{
 	background-position: center;
 	color: white;
 	font-family: "Times New Roman", Times, serif, "sans-serif";
+	height:100%;
 }
 header{
 	display: block;
@@ -14,42 +15,104 @@ body{
 	text-align: center;
 	display:block;
 	width:90%;
-	height:100%;
+	min-height:100%;
 	background:rgba(0,0,0,0.8);
 	margin: auto;
+	position: relative;
 }
 .center{
 	text-align: center;
 	width: 35%;
 	display: inline-block;
 	vertical-align:top;
+	margin-top: 4%;
 }
 .button{
 	border-radius: 10%;
 	padding: 5%;
 }
 .image{
-	margin: 1%;
+	margin: auto;
+	margin-top: 4%;
 	border: 2px;
-	width: 25%;
+	width: 20%;
 	border-style: solid;
 	border-radius: 5%;
 	display: inline-block;
 	vertical-align: top;
 }
 .text{
+	margin: auto;
+	width: 90%;
 	display: block;
 	text-align: center;
 }
+fieldset{
+	width: 90%;
+	margin: auto;
+}
+section{
+	padding-bottom: 50px;
+}
 footer{
+	width:100%;
 	display:block;
 	text-align: center;
+	position: absolute;
+	bottom: 0px;
 }
+footer p{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-top: solid 1px;
+	margin:auto;
+	width: 90%;
+}
+.table{
+	margin: auto;
+}
+.picProfil{
+	margin: auto;
+	margin-top: 4%;
+	border: 2px;
+	width: 20%;
+	border-style: solid;
+	border-radius: 5%;
+	display: inline-block;
+	vertical-align: top;
+}
+#space{
+	display: inline-block;
+	margin:auto;
+	margin-top: 40%;
+	width: 10%;
+	height: 200px;
+}
+.profil{
+	height: 550px;
+	vertical-align: top;
+	display: inline-block;
+	margin:auto;
+	margin-top: 25px;
+	width: 40%;
+	min-height: 90%;
+	border: solid 1px;
+}
+.info{
+	
+}
+
 @media screen and (max-width: 535px){
 	h1{
 		font-size: 1.5em;
 	}
+	.image{
+		display: none;
+	}
 	.button{
+		width: 100%;
+	}
+	.center{
 		width: 100%;
 	}
 	#divConnect{
@@ -64,5 +127,18 @@ footer{
 	}
 	.Inputs{
 		width:100%;
+	}
+	.profil{
+		width: 90%;
+		display: block;
+	}
+	#random{
+		border-radius: 10%;
+		width: 90%;
+	}
+	#space{
+		width: 90%;
+		height: 20px;
+		margin-top: 10%;
 	}
 }
